--- a/public_docs/web/templates/layout/app.html.eex
+++ b/public_docs/web/templates/layout/app.html.eex
@@ -21,8 +21,8 @@
 
     <div style="text-align: center;">
      <ul style="list-style-type: none; margin: 0; padding: 0;">
-        <li><a href="/docs/hints-api">Hints API</a></li>
-        <li><a href="/docs/related-search-api">Related Search API</a></li>
+        <li><a href="hints-api">Hints API</a></li>
+        <li><a href="related-search-api">Related Search API</a></li>
        </ul>
     </div>
     <hr/>
