--- a/public_docs/web/templates/layout/app.html.eex
+++ b/public_docs/web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
 
   <body>
     <div style="text-align: center;">
-      <img style="width:300px;" src="http://styleguide.findmypast.com/dist/3653463c28a308062ef498d51eb6d9be.png">
+      <img style="width:300px;" src="http://www.findmypast.co.uk/images/opengraph/fmp_new_logo.jpg">
     </div>
     
     <h2 align="center">Findmypast API Documentation</h2>
