DSN-495 Update logo to new brand

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <img style="width:300px;" src="http://www.findmypast.co.uk/images/opengraph/fmp_new_logo.jpg">
+  <img style="width:300px;" src="http://www.findmypast.co.uk/titan/static/logo-indigo-400x400.png">
 </div>
 
 <h1 align="center">{{ site.title }}</h1>
